docker-registry-mirror/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: docker-registry
  name: docker-registry
  namespace: devops
spec:
  type: ClusterIP
  ports:
  - name: http-5000
    port: 5000
  selector:
    app: docker-registry-mirror
