docker-registry-mirror/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry
  namespace: devops
spec:
  ingressClassName: nginx
  rules:
  - host: registry.voidking.com
    http:
      paths:
      - backend:
          service:
            name: docker-registry
            port:
              number: 5000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - registry.voidking.com
    secretName: docker-registry-cert
